<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">变电站运维平台</string>
    <string name="login_title">变电站运维平台</string>
    <string name="welcome">欢迎使用云联在线!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_med">MedActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="scanNFCPrompt">可在本页面扫描NFC(需先按右上角按钮下载厂站信息)</string>
    <string name="queryResult">设备参数</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home_manage">HomeManageActivity</string>
    <string name="stationList">站列表</string>
    <string name="server_address">服务器IP地址</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="rem_pwd">记住密码</string>
    <string name="login">登陆</string>
    <string name="downloadFile">文件下载</string>
    <string name="download_center">下载中心</string>
    <string name="upload_center">上载中心</string>
    <string name="title_activity_nfc">NFCActivity</string>
    <string name="realtime_curve_title">实时曲线</string>
    <string name="history_curve_title">历史曲线</string>
    <string name="history_curve_year">年曲线</string>
    <string name="history_curve_month">月曲线</string>
    <string name="history_curve_day">日曲线</string>
    <string name="realtime_curve_loop">回路</string>
    <string name="realtime_curve_type">曲线类型</string>
    <string name="history_curve_loop">回路</string>
    <string name="history_curve_type">曲线类型</string>
    <string name="realtime_curve_area_station">区域厂站</string>
    <string name="curve_date">日期：</string>
    <string name="max_min_value_display">最值显示</string>
    <string name="select_curves">曲线选择</string>
    <string name="download">加载文件</string>
    <string name="title_activity_tour">TourActivity</string>
    <string name="on_line">云联在线</string>
    <string name="about_system">关于系统</string>
    <string name="download_path">下载路径</string>
    <string name="file_error">创建文件失败</string>
    <string name="download_success">下载完成</string>
    <string name="download_error">下载失败</string>
    <string name="url_err">URL错误 </string>
    <string name="file_err">文件名错误</string>
    <string name="dir_err">文件目录错误</string>
    <string name="username_or_password_error">用户名或者密码错误 </string>
    <string name="server_address_error_or_network_not_connection">服务器地址异常或者网络异常</string>
    <string name="no_network_or_is_latest_version">没有网络或者已经是最新版本!</string>
    <string name="the_address_of_server_can_not_be_empty">服务器地址不能为空</string>
    <string name="username_can_not_be_empty">用户名不能为空</string>
    <string name="password_can_not_be_empty">密码不能为空</string>
    <string name="no_data_need_update">没有需要更新的数据!</string>
    <string name="reminder">提示</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="quit">退出登录</string>
    <string name="your_phone_not_support_nfc">您的手机不支持NFC功能</string>
    <string name="please_turn_on_the_nfc_switch">请打开NFC开关</string>
    <string name="turn_on_switch_get_nfc_read_service">请打开NFC开关，即可获取NFC标签读取服务</string>
    <string name="turn_on">开启</string>
    <string name="upload_file_not_exist">没有需要上传的文件</string>
    <string name="upload_successfully">上传成功!</string>
    <string name="upload_failed">上传失败!</string>
    <string name="please_download_the_file">请先点击右上角按钮下载json文件!</string>
    <string name="download_stationList_json_failed">加载stationList.json文件失败!</string>
    <string name="title_activity_download_center">DownloadCenterActivity</string>
    <string name="title_activity_upload_center">UploadCenterActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_about_system">AboutSystemActivity</string>

</resources>