<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff437dff"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/realtime_curve_title"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/realtime_curve_area_station"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/realtime_curve_area_station"
        android:textColor="#ff5f5f5f"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/realtime_curve_loop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_background"
        android:clickable="true"
        android:drawableRight="@drawable/abc_ic_go"
        android:padding="5dp"
        android:text="@string/realtime_curve_loop"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bfbfbf" />

    <TextView
        android:id="@+id/realtime_curve_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_background"
        android:clickable="true"
        android:drawableRight="@drawable/abc_ic_go"
        android:padding="5dp"
        android:text="@string/realtime_curve_type"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/realtime_max_min_value_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/date_textview_background"
                android:clickable="true"
                android:text="@string/max_min_value_display"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/realtime_select_curves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="8dp"
            android:background="@drawable/date_textview_background"
            android:clickable="true"
            android:gravity="right"
            android:text="@string/select_curves"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/realtime_curve_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>