<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff437dff"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/history_curve_title"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/history_curve_area_station"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/realtime_curve_area_station"
        android:textColor="#ff5f5f5f"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="#bfbfbf" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#bfbfbf" />

            <TextView
                android:id="@+id/history_curve_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/history_curve_year"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#bfbfbf" />

            <TextView
                android:id="@+id/history_curve_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/history_curve_month"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#bfbfbf" />

            <TextView
                android:id="@+id/history_curve_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/history_curve_day"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#bfbfbf" />
        </LinearLayout>

        <TextView
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="#bfbfbf" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/history_curve_loop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_background"
                android:clickable="true"
                android:drawableRight="@drawable/abc_ic_go"
                android:padding="5dp"
                android:text="@string/history_curve_loop"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bfbfbf" />

            <TextView
                android:id="@+id/history_curve_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_background"
                android:clickable="true"
                android:drawableRight="@drawable/abc_ic_go"
                android:padding="5dp"
                android:text="@string/history_curve_type"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bfbfbf" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/history_max_min_value_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="8dp"
                android:background="@drawable/date_textview_background"
                android:clickable="true"
                android:text="@string/max_min_value_display"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/history_select_curves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="16dp"
                android:background="@drawable/date_textview_background"
                android:clickable="true"
                android:text="@string/select_curves"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/curve_date"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/curve_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:background="@drawable/date_textview_background"
                android:clickable="true"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/history_curve_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>