<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

        <TextView
            style="@style/title_text"
            android:id="@+id/textView0" 
            android:text="@string/login_title"/>
  

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="28dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:paddingTop="8dp"
                android:src="@drawable/user_image" />

            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_alignBaseline="@+id/imageView1"
                android:layout_marginStart="@dimen/margin_middle"
                android:layout_marginLeft="@dimen/margin_middle"
                android:layout_toEndOf="@+id/imageView1"
                android:layout_toRightOf="@+id/imageView1"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName" >
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:paddingTop="8dp"
                android:src="@drawable/pwd_image" />

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_alignBaseline="@+id/imageView2"
                android:layout_marginStart="@dimen/margin_middle"
                android:layout_marginLeft="@dimen/margin_middle"
                android:layout_toEndOf="@+id/imageView2"
                android:layout_toRightOf="@+id/imageView2"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" >
            </EditText>
        </RelativeLayout>
        
        <TextView
            android:id="@+id/tv_setting" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="  登陆设置"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/sys_setting"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="24dp"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rem_pwd"
                 />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/login"
                android:background="@drawable/round_rec" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>